# DAG

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  arrow.cpp  arrow.h  dag.cpp  dag.h  diagramcontroller.cpp  diagramcontroller.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramscene.pro  edge.h  graph.cpp  graph.h  instruction.txt  mainwindow.cpp  mainwindow.h  operations.cpp  operations.h  tasks.json  test1 — копия.txt  test1.txt  visualgraph.cpp  visualgraph.h  visualnode.cpp  visualnode.h  смешанное.txt
src/: arrow.cpp  arrow.h  diagramscene.cpp  diagramscene.h  graph.cpp  graph.h  mainwindow.cpp  mainwindow.h  visualnode.cpp  visualnode.h
